# tkr-news-gather

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTHENTICATION.md  DEPENDENCY_MIGRATION.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Makefile  README.md  RUNPOD_DEPLOYMENT.md  SECURITY.md  deploy.py  docker-compose.yml  fetch_news.py  news_gather_serverless.sh  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements-security.txt  requirements-updated.txt  requirements.txt  run_local.py  runpod_handler.py  runpod_wrapper.py  start_report_server  start_server  test_auth.py  test_deps.py  test_serverless.sh
.claude/: settings.local.json
.claude/commands/: rr_review.md
.github/: dependabot.yml
.github/workflows/: security-scan.yml
_project/_claude/: claude.local.md
_project/_ref/: _project.yml  anthropic_batch_processing.md  python-implementation.md  supabase-setup.md  tkr-news-gather-structure.md
_project/_ref/runpod-docs/serverless/workers/: custom-worker.mdx
_project/repo-review/reports/: analysis.config.json  dashboard.html  execution-metrics.json
_project/repo-review/reports/overview/: analysis-report.md  findings.json  metrics.json
_project/repo-review/reports/quality/: analysis-report.md  findings.json  metrics.json
_project/repo-review/reports/security/: analysis-report.md  findings.json  metrics.json
database/: README.md  auth_migration.sql  schema.sql  schema_with_auth.sql
scripts/: deps-check.sh  generate-credentials.py  security-scan.sh  test-security.sh
src/: api.py  api_simple.py  main.py  main_secure.py
src/news/: __init__.py  article_scraper.py  google_news_client.py  google_news_client_improved.py  google_news_decoder.py  news_processor.py  provinces.py  simple_news_client.py  simple_scraper.py
src/utils/: __init__.py  anthropic_client.py  config.py  local_storage.py  logger.py  middleware.py  security.py  supabase_auth.py  supabase_client.py
tests/: conftest.py  test_auth.py  test_news_gather.py
tests/unit/: test_utils.py
